<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/dashboard_item_5_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/BMW_start"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:background="#1589FF"
                android:fontFamily="casual"
                android:scrollbarStyle="insideOverlay"
                android:text="@string/bmw_pl_cerea_de_a_conduce"
                android:textAlignment="center"
                android:textColor="#000"
                android:textSize="19sp"
                android:textStyle="bold">

            </TextView>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <LinearLayout
                    android:id="@+id/background_reprez"
                    android:layout_width="match_parent"
                    android:layout_height="235dp"
                    android:background="@drawable/background_reprezentata"
                    android:gravity="center"
                    android:orientation="vertical">


                </LinearLayout>


            </RelativeLayout>

            <TextView
                android:id="@+id/t1_gol"
                android:layout_width="wrap_content"
                android:layout_height="25dp">

            </TextView>

            <Button

                android:id="@+id/test_drive"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="#306EFF"
                android:drawableTint="#FFF"
                android:fontFamily="monospace"
                android:scrollbars="vertical"
                android:text="@string/programeaz_un_test_drive"
                android:gravity="center"
                android:textColor="#000"
                android:textSize="20sp">

            </Button>

            <TextView
                android:id="@+id/t2_gol"
                android:layout_width="wrap_content"
                android:layout_height="25dp">

            </TextView>

            <Button

                android:id="@+id/modele"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="#1F45FC"
                android:fontFamily="sans-serif-condensed"
                android:scrollbars="vertical"
                android:text="@string/modele_disponibile"
                android:textColor="#000"
                android:gravity="center"
                android:textSize="20sp">

            </Button>

            <TextView
                android:id="@+id/t3_gol"
                android:layout_width="wrap_content"
                android:layout_height="25dp">

            </TextView>

            <Button

                android:id="@+id/dealeri"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="#3BB9FF"
                android:fontFamily="sans-serif-condensed-light"
                android:scrollbars="vertical"
                android:text="@string/dealeri_disponibili"
                android:textColor="#000"
                android:gravity="center"
                android:textSize="20sp">

            </Button>

            <TextView
                android:id="@+id/t4_gol"
                android:layout_width="wrap_content"
                android:layout_height="25dp">

            </TextView>

            <ImageView
                android:id="@+id/logo3"
                android:layout_width="match_parent"
                android:layout_height="210dp"
                android:background="@drawable/background_reprezentata"
                android:contentDescription="@string/todo">

            </ImageView>

        </LinearLayout>


    </ScrollView>



</LinearLayout>