<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dashboard_item_5_background"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ModeleDispActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:orientation="vertical"
            android:paddingTop="15dp"
            android:paddingBottom="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:fontFamily="casual"
                android:gravity="center"
                android:text="@string/modele_disponibile_dealer"
                android:textColor="@color/colorWhite"
                android:textSize="22sp"
                android:textStyle="bold">

            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="40dp"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center"
                android:text="@string/informare2"
                android:textColor="@color/colorLightText"
                android:textSize="19sp"/>

        </LinearLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="7dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="129dp"
                        android:background="@drawable/dashboard_item_1_background">


                        <ImageView
                            android:id="@+id/image_icon1"
                            android:layout_width="158dp"
                            android:layout_height="144dp"
                            android:background="@drawable/seria4"
                            android:contentDescription="@string/app_name"
                            android:padding="20dp"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:ignore="MissingConstraints">

                        </ImageView>

                        <TextView
                            android:id="@+id/test_item1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:drawableTint="#FFFFFF"
                            android:text="BMW seria 4 ,430i "
                            android:textColor="#FFF"
                            android:textSize="22dp"
                            android:textStyle="bold"

                            tools:ignore="MissingConstraints"
                            tools:layout_editor_absoluteX="169dp"
                            tools:layout_editor_absoluteY="50dp">

                        </TextView>


                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="7dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="129dp"
                        android:background="@drawable/dashboard_item_2_background">


                        <ImageView
                            android:id="@+id/image_icon2"
                            android:layout_width="158dp"
                            android:layout_height="144dp"
                            android:background="@drawable/seria7"
                            android:contentDescription="@string/app_name"
                            android:padding="20dp"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:ignore="MissingConstraints">

                        </ImageView>

                        <TextView
                            android:id="@+id/test_item2"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:drawableTint="#FFFFFF"
                            android:text="BMW seria 7 ,740i "
                            android:textColor="#FFF"
                            android:textSize="22dp"
                            android:textStyle="bold"

                            tools:ignore="MissingConstraints"
                            tools:layout_editor_absoluteX="169dp"
                            tools:layout_editor_absoluteY="50dp">

                        </TextView>


                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="7dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="129dp"
                        android:background="@drawable/dashboard_item_4_background">


                        <ImageView
                            android:id="@+id/image_icon3"
                            android:layout_width="158dp"
                            android:layout_height="144dp"
                            android:background="@drawable/x6"
                            android:contentDescription="@string/app_name"
                            android:padding="20dp"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:ignore="MissingConstraints">

                        </ImageView>

                        <TextView
                            android:id="@+id/test_item3"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:drawableTint="#FFFFFF"
                            android:text="BMW X6M ,M50d "
                            android:textColor="#FFF"
                            android:textSize="22dp"
                            android:textStyle="bold"

                            tools:ignore="MissingConstraints"
                            tools:layout_editor_absoluteX="169dp"
                            tools:layout_editor_absoluteY="50dp">

                        </TextView>


                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="7dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/dashboard_item_3_background">


y                        <ImageView
                            android:id="@+id/image_icon4"
                            android:layout_width="147dp"
                            android:layout_height="125dp"
                            android:background="@drawable/bmw_i8"
                            android:contentDescription="@string/app_name"
                            android:padding="20dp"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:ignore="MissingConstraints">

                        </ImageView>

                        <TextView
                            android:id="@+id/test_item4"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:drawableTint="#FFFFFF"
                            android:text="BMW i8 Roadster"
                            android:textColor="#FFF"
                            android:textSize="22dp"
                            android:textStyle="bold"

                            tools:ignore="MissingConstraints"
                            tools:layout_editor_absoluteX="169dp"
                            tools:layout_editor_absoluteY="50dp">

                        </TextView>


                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>


        </androidx.core.widget.NestedScrollView>

    </LinearLayout>

</ScrollView>